Fixed Map
Map just doesn't appear below 1000px, and will disappear whenever the page resizes. Also got rid of some now redundant code that would not do anything.

--- a/wm_main.css
+++ b/wm_main.css
@@ -206,8 +206,6 @@ iframe {
 .mapouter {
         position: relative;
         text-align: right;
-        height: 500px;
-        width: 500px;
 }
 
 .gmap_canvas {
@@ -380,7 +378,6 @@ form input:focus:invalid {
 .mapouter {
         position: relative;
         text-align: right;
-        height: 500px;
 }
 
 .gmap_canvas {
@@ -482,16 +479,6 @@ form input:focus:invalid {
         #map2,
         #map3 {
                 display: none;
-        }
-
-        .mapouter {
-                width: 340px;
-        }
-
-        .gmap_canvas {
-                width: 100%;
-                margin-left: auto;
-                margin-right: auto;
         }
 }
 
@@ -603,11 +590,5 @@ form input:focus:invalid {
         #map3 {
                 display: none;
                 width: 100%;
-        }
-
-        .gmap_canvas {
-                width: 100%;
-                margin-left: auto;
-                margin-right: auto;
         }
 }
